--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Home/Search.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Home/Search.cshtml
@@ -208,3 +208,31 @@
         </li>
     </ul>
 </nav>
+<style>
+    .page-item {
+        border: none;
+        border-bottom: 1px solid #ccc;
+        background-color: #272e48;
+        color: wheat;
+        font-size: 1rem;
+        padding: 0.3rem;
+        margin-left: 0.3rem;
+    }
+
+        .page-item.disabled a.page-link {
+            color: wheat;
+            background-color: #272e48;
+            opacity: 0.5;
+        }
+
+
+        .page-item a {
+            color: wheat;
+            background-color: #272e48;
+        }
+
+            .page-item a:focus {
+                outline: none;
+            }
+
+</style>
