--- a/Artful-Adventures/ArtfulAdventures.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -10,7 +10,7 @@
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
-<partial name="_StatusMessage" for="StatusMessage" />
+
 <form id="profile-form" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="container">
@@ -30,12 +30,12 @@
                                         <img src="~/local/no-profile-picture.jpg" alt="user">
                                     }
                                 </div>
-                                <h5 class="user-name">@Model.Username</h5>
-                                <h6 class="user-email">@user.Email</h6>
-                                <h6 class="user-email">@user.Name</h6>
+                                <h5 class="user-info">@Model.Username</h5>
+                                <h6 class="user-info">@user.Email</h6>
+                                <h6 class="user-info">@user.Name</h6>
                             </div>
-                            <div class="about">
-                                <h5 class="mb-2 text-primary">About</h5>
+                            <div class="user-info">
+                                <h5 class="mb-2" style="color:#bcd0f7;">About</h5>
                                 <p>@user.About</p>
                             </div>
                         </div>
@@ -47,7 +47,7 @@
                     <div class="card-body">
                         <div class="row gutters" style="margin-bottom: 15px;">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                <h6 class="mb-3 text-primary">Personal Details</h6>
+                                <h6 class="mb-3" style="color:#bcd0f7;">Personal Details</h6>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                                 <div class="form-group" style="margin-bottom: 15px;">
@@ -81,14 +81,14 @@
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                                 <div class="form-group" style="margin-bottom: 15px;">
                                     <label asp-for="Input.Bio" class="form-label"></label>
-                                    <textarea asp-for="Input.Bio" class="form-control" rows="2"></textarea>
+                                    <textarea asp-for="Input.Bio" class="form-control" rows="4"></textarea>
                                     <span asp-validation-for="Input.Bio" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
                                 <div class="form-group" style="margin-bottom: 15px;">
                                     <label asp-for="Input.About" class="form-label"></label>
-                                    <textarea asp-for="Input.About" class="form-control" rows="2"></textarea>
+                                    <textarea asp-for="Input.About" class="form-control" rows="4"></textarea>
                                     <span asp-validation-for="Input.About" class="text-danger"></span>
                                 </div>
                             </div>
@@ -96,7 +96,7 @@
                         <div class="row gutters">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                 <div class="text-right">
-                                    <button type="submit" id="update-profile-button" name="submit" class="btn btn-primary">Update</button>
+                                    <button type="submit" id="update-profile-button" name="submit" class="btn btn-outline-dark my-2 blog-button-white" style="color:#bcd0f7;">Update</button>
                                 </div>
                             </div>
                         </div>
@@ -110,3 +110,17 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<style>
+    .form-label {
+        font-size: 12px;
+        font-weight: 600;
+        color: #808080;
+    }
+    .user-info{
+        font-size: 12px;
+        font-weight: 600;
+        color: #808080;
+        text-align: center;
+    }
+</style>
