--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Blog/BlogDetails.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Blog/BlogDetails.cshtml
@@ -31,7 +31,7 @@
 
         </style>
         <div class="bg-image hover-overlay shadow-1-strong ripple rounded-5 mb-4" data-mdb-ripple-color="light">
-            <img src="~/images/@Model.ImageUrl" class="img-fluid center" />
+            <img src="~/images/@Model.ImageUrl" class="img-fluid center"/>
             <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
             </a>
@@ -45,7 +45,9 @@
                 </a>
             </li>
 
-            <li class="list-inline-item" style="color:#abd5ff"><i class="far fa-clock" style="color:#abd5ff"></i> @Model.CreatedOn</li>
+            <li class="list-inline-item" style="color:#abd5ff">
+                <i class="far fa-clock" style="color:#abd5ff"></i> @Model.CreatedOn
+            </li>
         </ul>
 
         <!-- Article title and description -->
@@ -57,11 +59,11 @@
             </p>
 
         </a>
-        <hr />
+        <hr/>
 
         <form method="post" asp-area="" asp-controller="Blog" asp-action="Like" asp-route-blogId="@Model.Id">
             <button type="submit" class="btn btn-outline-dark my-2 mx-auto" style="color:wheat;  background-color:#284564; margin-bottom: 2rem!important;">
-                Like<span class="badge ms-2">@Model.Likes</span></a>
+                Like<span class="badge ms-2">@Model.Likes</span>
             </button>
         </form>
     </div>
@@ -82,17 +84,35 @@
 
                                     <img class="rounded-circle shadow-1-strong me-3"
                                          src="~/local/no-profile-picture.jpg" alt="avatar" width="40"
-                                         height="40" />
+                                         height="40"/>
 
-                                    <div class="form-outline w-100">
-                                        <textarea class="form-control" id="textArea" rows="4"
-                                                  style="background-color: transparent; color:#88c4f7;"></textarea>
-                                    </div>
+                                    @if (Model.isCurrentUserMuted == false)
+                                    {
+                                        <div class="form-outline w-100">
+                                            <textarea class="form-control" id="textArea" rows="4"
+                                                                                      style="background-color: transparent; color:#88c4f7;"></textarea>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="form-outline w-100">
+                                            <p>Current user is muted.</p>
+                                            <textarea class="form-control" id="textArea" rows="4" disabled
+                                                      style="background-color: transparent; color:#88c4f7;"></textarea>
+                                        </div>
+                                    }
                                 </div>
                                 <div style="display: flex; justify-content:space-between">
                                     <form asp-area="" asp-controller="Comment" asp-action="AddCommentBlog" asp-route-blogId="@Model.Id" method="post">
-                                        <input type="hidden" name="content" id="contentInput" />
-                                        <button type="submit" id="button" class="btn btn-outline-dark my-2 blog-button-white" style="color:wheat; width: 120px; margin-bottom: 1rem!important; margin-left: 3.4rem!important; margin-top: 1rem!important;">Post comment</button>
+                                        <input type="hidden" name="content" id="contentInput"/>
+                                        @if (Model.isCurrentUserMuted == false)
+                                        {
+                                            <button type="submit" id="button" class="btn btn-outline-dark my-2 blog-button-white" style="color:wheat; width: 120px; margin-bottom: 1rem!important; margin-left: 3.4rem!important; margin-top: 1rem!important;">Post comment</button>
+                                        }
+                                        else
+                                        {
+                                            <button type="submit" id="button" class="btn btn-outline-dark my-2 blog-button-white" style="color:wheat; width: 120px; margin-bottom: 1rem!important; margin-left: 3.4rem!important; margin-top: 1rem!important;" disabled>Post comment</button>
+                                        }
                                     </form>
                                 </div>
                             </div>
@@ -107,14 +127,13 @@
                                             {
                                                 <img class="rounded-circle shadow-1-strong me-3"
                                                      src="~/images/@comment.AuthorPictureUrl" alt="avatar" width="40"
-                                                     height="40" />
-
+                                                     height="40"/>
                                             }
                                             else
                                             {
                                                 <img class="rounded-circle shadow-1-strong me-3"
                                                      src="~/local/no-profile-picture.jpg" alt="avatar" width="40"
-                                                     height="40" />
+                                                     height="40"/>
                                             }
                                             <div>
                                                 <a href="@Url.Action("Profile", "UserProfile", new { username = @comment.Author })" style="color:deepskyblue">
@@ -140,9 +159,9 @@
                                         }
                                     </div>
 
-                                    <hr class="my-0" style="height: 1px;" />
+                                    <hr class="my-0" style="height: 1px;"/>
 
-                                    <hr class="my-0" />
+                                    <hr class="my-0"/>
                                 }
                             }
                         </div>
