--- a/Artful-Adventures/ArtfulAdventures.Web/Areas/Identity/Pages/Account/Manage/Picture.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Areas/Identity/Pages/Account/Manage/Picture.cshtml
@@ -20,9 +20,9 @@
 
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="mb-3 pt-3 pb-3">
+                        <div class="mb-3 pt-3 pb-3" >
                             <input class="form-control mb-2" type="file" name="file" id="file" style="width: 180%" />
-                            <button type="submit" id="update-profile-button" name="submit" class="btn btn-primary">Update</button>
+                            <button type="submit" id="update-profile-button" name="submit" class="btn btn-outline-dark my-2 blog-button-white">Update</button>
                         </div>
                     </div>
                 </div>
