--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Blog/BlogDetails.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Blog/BlogDetails.cshtml
@@ -5,6 +5,12 @@
     ViewData["Title"] = "Blog Details";
 }
 
+@if(TempData["Error"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        @TempData["Error"]
+    </div>
+}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 
 
