--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/ManageGetAllPictures.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/ManageGetAllPictures.cshtml
@@ -25,7 +25,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 
-<h1 class="text-center">Manage Portfolio</h1>
+<h1 class="text-center">@ViewBag.Title</h1>
 
 <hr style="margin-top: 50px; margin-bottom:50px;" />
 
@@ -36,8 +36,6 @@
 
     .text-purple {
         color: #bcd0f7;
-    }
-
     }
 </style>
 
