--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Followers.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Followers.cshtml
@@ -1,5 +1,11 @@
 ﻿@model FollowViewModel
 
+@if(TempData["Error"] != null)
+{
+    <div class="alert alert-danger bg-dark text-white" role="alert">
+        @TempData["Error"]
+    </div>
+}
 @{
     ViewBag.Title = "Followers";
 }
