--- a/Artful-Adventures/ArtfulAdventures.Web/Areas/Identity/Pages/Account/Manage/ManageSkillsModel.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Areas/Identity/Pages/Account/Manage/ManageSkillsModel.cshtml
@@ -18,8 +18,8 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Skill</th>
-                <th></th>
+                <th class="thead-lightblue">Skill</th>
+                <th class="thead-lightblue"></th>
             </tr>
         </thead>
         <tbody>
@@ -27,18 +27,18 @@
             {
                 <tr>
                     <td>@skill.Type</td>
-                    <td><button type="submit" asp-page-handler="RemoveSkill" asp-route-skillId="@skill.Id">Remove</button></td>
+                    <td><button class="btn btn-outline-dark my-2 blog-button-white" type="submit" asp-page-handler="RemoveSkill" asp-route-skillId="@skill.Id">Remove</button></td>
                 </tr>
             }
         </tbody>
     </table>
 
     <div class="form-group">
-        <label asp-for="SelectedSkill">Add Skill</label>
+        <label asp-for="SelectedSkill" >Add Skill</label>
         <select asp-for="SelectedSkill" asp-items="Model.AvailableSkills" class="form-control"></select>
     </div>
 
-    <button type="submit" asp-page-handler="AddSkill">Add Skill</button>
+    <button class="btn btn-outline-dark my-2 blog-button-white" type="submit" asp-page-handler="AddSkill">Add Skill</button>
 </form>
 
 @section Scripts {
@@ -46,3 +46,12 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+<style>
+    .table td, th {
+            color: #bcd0f7;
+            background-color: transparent;
+        }
+        .thead-lightblue{
+            background-color: lightblue!important;
+            }
+</style>
