--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Favorites.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Favorites.cshtml
@@ -8,7 +8,12 @@
     <div class="alert alert-danger bg-dark text-white" role="alert">
         @TempData["Message"]
     </div>
-
+}
+@if(TempData["Error"] != null)
+{
+    <div class="alert alert-danger bg-dark text-white" role="alert">
+        @TempData["Error"]
+    </div>
 }
 <div class="d-flex justify-content-center align-items-center">
     <div class="card mb-4" style="background: radial-gradient(circle at 10% 20%, rgba(218, 203, 246,0.3) 10%, rgba(192, 192, 245,0.1) 33.1%, rgba(218, 203, 246,0.5) 90%);border-color:rgb(218, 203, 246); width:50%;">
