--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Portfolio.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Portfolio.cshtml
@@ -8,7 +8,12 @@
     <div class="alert alert-danger bg-dark text-white" role="alert">
         @TempData["Message"]
     </div>
-
+}
+@if (TempData["Error"] != null)
+{
+    <div class="alert alert-success bg-dark text-white" role="alert">
+        @TempData["Error"]
+    </div>
 }
 
 <div class="d-flex justify-content-center align-items-center">
