--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Blog/BlogDetails.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Blog/BlogDetails.cshtml
@@ -178,7 +178,7 @@
     </section>
 </div>
 
-//Script for copying the text from the text area to the hidden input
+ <!-- Script for copying the text from the text area to the hidden input -->
 <script>
     let button = document.getElementById("button");
     button.addEventListener("click", function () {
