--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Blog/CreateBlog.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Blog/CreateBlog.cshtml
@@ -58,7 +58,7 @@
     </div>
 </form>
 
-// JavaScript for character count
+ <!-- JavaScript for character count -->
 <script>
     document.querySelector('textarea').addEventListener('input', function () {
         const charCount = this.value.length;
