--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/PictureDetails.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/PictureDetails.cshtml
@@ -43,11 +43,11 @@
             }
         </div>
         <div class="col-md-9 d-flex align-items-center frosted-glass">
-            <section class="picture-view">
+           
                 <div style="width: 100%; height: auto; overflow: hidden;">
                     <img src="~/images/@Model.Url" alt="Picture" class="img-fluid" style="object-fit: contain; width: 100%; margin: auto;">
                 </div>
-            </section>
+            
         </div>
 
         <!-- Section 2: Profile Information -->
@@ -279,7 +279,7 @@
     }
 </style>
 
-//Script for copying the text from the text area to the hidden input
+ <!-- Script for copying the text from the text area to the hidden input -->
 <script>
     let button = document.getElementById("button");
     button.addEventListener("click", function () {
