--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
@@ -95,7 +95,7 @@
 </form>
 <span asp-validation-for="@Model.HashTags" class="text-danger"></span>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-//This script is used to toggle the checkbox when the button is clicked
+ <!-- This script is used to toggle the checkbox when the button is clicked -->
 <script>
     $(document).ready(function () {
         $('.btn-custom').click(function (event) {
@@ -109,7 +109,7 @@
 
 </script>
 
-//This script is used to count the characters in the description textarea
+ <!-- This script is used to count the characters in the description textarea -->
 <script>
     document.querySelector('textarea').addEventListener('input', function () {
         var charCount = this.value.length;
