--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Following/All.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Following/All.cshtml
@@ -56,7 +56,7 @@
                     outline: none;
                 }
         </style>
-        //Sort by tag
+        <!-- Sort by tag -->
         <script>
             document.getElementById('tag-input').addEventListener('input', function () {
                 var sort = this.value;
@@ -66,7 +66,7 @@
                 link.setAttribute('href', href);
             });
         </script>
-        //Sort by user
+        <!-- Sort by user -->
         <script>
             document.getElementById('user-input').addEventListener('input', function () {
                 var sort = this.value;
@@ -76,7 +76,7 @@
                 link.setAttribute('href', href);
             });
         </script>
-        //Tag suggestions
+         <!-- Tag suggestions -->
         <script>
             var hashTags = @Html.Raw(Json.Serialize(Model.TagsForDropDown));
 
