--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Home/Index.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
 }
 
 </style>
-//Carousel
+ <!-- Carousel -->
 <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"
