--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/EditPicture.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/EditPicture.cshtml
@@ -93,7 +93,7 @@
 </form>
 <span asp-validation-for="@Model.HashTags" class="text-danger"></span>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-//This script is for the checkbox to be checked when the label is clicked
+ <!-- This script is for the checkbox to be checked when the label is clicked -->
 <script>
     $(document).ready(function () {
         $('.btn-custom').click(function (event) {
@@ -108,7 +108,7 @@
 
 </script>
 
-//This script is for the character count
+ <!-- This script is for the character count -->
 <script>
     document.querySelector('textarea').addEventListener('input', function () {
         var charCount = this.value.length;
